(env
 (dev
  (flags (:standard -w -27-26-32))))

(library
 (name sparray)
 (modules sparray))
(test
 (name test_sparray)
 (modules test_sparray)
 (libraries sparray))

(library
 (name splist)
 (modules splist)
 (libraries vector))
(test
 (name test_splist)
 (modules test_splist)
 (libraries splist))

(library
 (name spuf)
 (modules spuf)
 (libraries sparray))
(test
 (name test_spuf)
 (modules test_spuf)
 (libraries spuf))

(library
 (name spgraph)
 (modules spgraph)
 (libraries sparray splist))

(library
 (name dp)
 (modules dp)
 (libraries spgraph spuf))
(test
 (name test_dp)
 (modules test_dp)
 (libraries dp))

(library
 (name parray)
 (modules parray))

(executable
 (name bench)
 (modules bench)
 (libraries unix sparray parray splist spgraph))
